<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@drawable/bg_white_top_start_end_16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_16dp"
    tools:context=".dialog.SortByBottomSheet">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewClose"
        android:layout_width="@dimen/_32dp"
        android:layout_height="@dimen/_32dp"
        android:src="@drawable/ic_close"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sort_by"
        android:fontFamily="sans-serif-black"
        android:textSize="@dimen/_18sp"
        android:textColor="@color/color_000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioAscending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sort_distance_in_ascending_order"
            app:buttonTint="@color/color_FF0066"
            android:checked="true"
            android:paddingHorizontal="@dimen/_16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/color_000000"
            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioDescending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sort_distance_in_descending_order"
            app:buttonTint="@color/color_FF0066"
            android:paddingHorizontal="@dimen/_16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/color_000000"
            />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_pink_9dp"
        android:text="@string/label_apply"
        android:textColor="@color/color_FFFFFF"
        android:textAllCaps="false"
        android:textSize="@dimen/_18sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_16dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/label_clear"
        android:textAllCaps="false"
        android:textSize="@dimen/_18sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="@id/buttonApply"
        app:layout_constraintBottom_toBottomOf="@id/buttonApply"
        app:layout_constraintEnd_toStartOf="@id/buttonApply"
        android:layout_marginEnd="@dimen/_16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>