<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SearchPlacesFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_8dp"

            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewBack"
                android:layout_width="@dimen/_32dp"
                android:layout_height="@dimen/_32dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_search_places"
                android:textSize="@dimen/_24sp"
                android:textColor="@color/color_FF0066"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:background="@color/color_000000"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <FrameLayout
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintSearchResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp"
        android:background="@drawable/bg_search_results"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_result"
            android:textSize="@dimen/_18sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/color_000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewResult"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_16dp"
            app:layout_constraintBottom_toTopOf="@id/textViewSearchPlace"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="recyclerView, textViewResult"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSearchPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_search_place"
            android:textSize="@dimen/_18sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/color_000000"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_eg_vastrapur"
            app:boxCornerRadiusBottomEnd="@dimen/_25dp"
            app:boxCornerRadiusBottomStart="@dimen/_25dp"
            app:boxCornerRadiusTopEnd="@dimen/_25dp"
            android:layout_marginBottom="@dimen/_8dp"
            app:boxCornerRadiusTopStart="@dimen/_25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearSavePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:padding="@dimen/_16dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@drawable/bg_save_location_popup"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSaveLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/_18sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/label_do_you_want_to_save_this_selected_location"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_FFFFFF"
            android:fontFamily="sans-serif"
            android:text="@string/label_save"
            android:layout_gravity="end"
            android:textAllCaps="false"
            android:background="@drawable/bg_button_pink_9dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>