<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.RoutingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_8dp"

            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewBack"
                android:layout_width="@dimen/_32dp"
                android:layout_height="@dimen/_32dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_routing"
                android:textSize="@dimen/_24sp"
                android:textColor="@color/color_FF0066"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:background="@color/color_000000"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <FrameLayout
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/generateRouteProgressDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_search_results"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/textViewGenerateProgressInformation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/textViewPleaseWait"
            android:indeterminateTint="@color/color_FF0066" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewGenerateProgressInformation"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/color_000000"
            android:text="@string/text_generating_route_information"
            app:layout_constraintStart_toEndOf="@id/progressBar"
            android:layout_marginStart="@dimen/_8dp"
            app:layout_constraintTop_toTopOf="@id/progressBar"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewPleaseWait"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16sp"
            android:textColor="@color/color_000000"
            android:fontFamily="sans-serif-medium"
            android:text="@string/text_please_wait"
            app:layout_constraintTop_toBottomOf="@id/textViewGenerateProgressInformation"
            app:layout_constraintStart_toStartOf="@id/textViewGenerateProgressInformation"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>