<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LocationSourceListFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_8dp"

            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewLocation"
                android:layout_width="@dimen/_32dp"
                android:layout_height="@dimen/_32dp"
                android:src="@drawable/ic_location_pin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_location_source"
                android:textSize="@dimen/_24sp"
                android:textColor="@color/color_FF0066"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintEnd_toStartOf="@id/imageViewFilter"
                app:layout_constraintTop_toTopOf="@id/imageViewLocation"
                app:layout_constraintBottom_toBottomOf="@id/imageViewLocation"
                app:layout_constraintStart_toEndOf="@id/imageViewLocation"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewFilter"
                android:layout_width="@dimen/_32dp"
                android:layout_height="@dimen/_32dp"
                android:src="@drawable/ic_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:background="@color/color_000000"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewLocationLarge"
            android:layout_width="@dimen/_64dp"
            android:layout_height="@dimen/_64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/textViewNoPlaceAvailable"
            android:src="@drawable/ic_location_pin"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewNoPlaceAvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageViewLocationLarge"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/_24sp"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toTopOf="@id/buttonAddPoi"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/text_no_place_available_nlets_start_by_adding_few_places"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddPoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_border_pink_50dp"
            app:layout_constraintTop_toBottomOf="@id/textViewNoPlaceAvailable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_24dp"
            android:textAllCaps="false"
            android:text="@string/label_add_poi"
            android:textColor="@color/color_FF0066"
            android:paddingHorizontal="@dimen/_32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/_16sp"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupNoLocations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="buttonAddPoi, textViewNoPlaceAvailable, imageViewLocationLarge"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonAddPoiLarge"
            app:layout_constraintVertical_bias="0"
            android:layout_marginBottom="@dimen/_16dp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewDrawPath"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_assistant_direction"
            app:layout_constraintBottom_toTopOf="@id/buttonAddPoiLarge"
            app:layout_constraintEnd_toEndOf="@id/buttonAddPoiLarge"
            android:layout_marginBottom="@dimen/_16dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddPoiLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_pink_50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/_16dp"
            android:text="@string/label_add_poi"
            android:textSize="@dimen/_18sp"
            android:textColor="@color/color_FFFFFF"
            android:textAllCaps="false"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="buttonAddPoiLarge, imageViewDrawPath, recyclerView"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>